update page & promo code option
